[tool.poetry]
name = "united-batchery-bot"
version = "0.1.0"
description = ""
authors = ["kill_your_soul <platonovdi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
redis = "^5.0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "FA100",
    "RET504",
    "A002",
    "ANN101",
    "SIM108",
    "S113",
    "T201"
]


[tool.ruff]
target-version = "py310"
line-length = 120